@@ -25,8 +25,7 @@ deps =
 [testenv:flake8]
 commands = flake8 texsite
 
-basepython =
-    python3.4
+basepython = python3
 
 deps =
     flake8>=2.4.1
